# frame-comparison-tool

./: .gitignore  pyproject.toml
.github/workflows/: build.yml
frame_comparison_tool/: __main__.py  components.py  main.py
