[tool.poetry]
name = "frame-comparison-tool"
version = "0.1.0"
description = ""
authors = ["Roberto Anić Banić <roberto@banic.hr>"]
license = "MIT"
classifiers = [
    "Development Status :: Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"

loguru = "^0.7.2"
opencv-python-headless = "^4.9.0.80"
Pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.6.0"

[tool.poetry-pyinstaller-plugin.scripts]
frame-comparison-tool = { source = "frame_comparison_tool/main.py", type = "onefile", bundle = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
